fix opacity slider styles and visibility

--- a/src/main/js/bundles/dn_vuetoc/css/styles.css
+++ b/src/main/js/bundles/dn_vuetoc/css/styles.css
@@ -15,11 +15,11 @@
     padding: 0;
 }
 
-.ctAppRoot .vue-toc__layer-menu .vue-toc__opacity .list__tile {
+.ctAppRoot .vue-toc__layer-menu .vue-toc__slider .list__tile {
     padding-left: 16px;
 }
 
-.ctAppRoot .vue-toc__layer-menu .vue-toc__opacity .list__tile .input-group--slider {
+.ctAppRoot .vue-toc__layer-menu .vue-toc__slider .list__tile .input-group--slider {
     padding-top: 6px;
     padding-left: 12px;
     padding-right: 12px;
